--- a/docs/3.0rc/manage/cloud/manage-users/audit-logs.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/audit-logs.mdx
@@ -9,7 +9,7 @@ allowing you to monitor detailed Prefect Cloud actions for security and complian
 
 Audit logs show who took what action, when, and using what resources within your Prefect Cloud account.
 In conjunction with appropriate tools and procedures, audit logs assist in detecting 
-potential security violations and investigating application errors.  
+potential security violations and investigating app errors.  
 
 Audit logs record:
 
