--- a/docs/integrations/prefect-email/index.mdx
+++ b/docs/integrations/prefect-email/index.mdx
@@ -4,7 +4,7 @@ title: prefect-email
 
 The `prefect-email` library helps you send emails from your Prefect flows.
 
-## Getting Started
+## Getting started
 
 ### Prerequisites
 
