--- a/docs/integrations/prefect-slack/index.mdx
+++ b/docs/integrations/prefect-slack/index.mdx
@@ -6,7 +6,7 @@ title: prefect-slack
 
 `prefect-slack` is a collection of prebuilt Prefect tasks that can be used to quickly construct Prefect flows.
 
-## Getting Started
+## Getting started
 
 ### Python setup
 
