--- a/docs/integrations/prefect-snowflake/index.mdx
+++ b/docs/integrations/prefect-snowflake/index.mdx
@@ -7,7 +7,7 @@ title: prefect-snowflake
 
 The prefect-snowflake collection makes it easy to connect to a Snowflake database in your Prefect flows. Check out the examples below to get started!
 
-## Getting Started
+## Getting started
 
 ### Prerequisites
 
