--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -28,7 +28,7 @@ if __name__ == "__main__":
     Learn how to schedule a script to run on remote infrastructure and observe its state.
   </Card>
   <Card title="Prefect Cloud" icon="cloud" href="/3.0rc/manage/cloud/index">
-    Use our hosted workflow application platform that provides all the capabilities of open source Prefect plus additional features.
+    Use our hosted workflow app platform that provides all the capabilities of open source Prefect plus additional features.
   </Card>
   <Card title="Upgrade to Prefect 3" icon="sparkles" href="/3.0rc/resources/upgrade-prefect-3">
     Learn how to migrate from Prefect 2 to Prefect 3 to get the latest features and performance enhancements.
