--- a/docs/3.0rc/manage/cloud/manage-users/configure-sso.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/configure-sso.mdx
@@ -33,7 +33,7 @@ configuration. If your provider isn't listed, try `SAML` or `Open ID Connect` in
 
 ![Opening the Identity Provider Configuration dashboard.](/3.0rc/img/ui/cloud-sso-dashboard.png)
 
-Once you complete SSO configuration, your users must authenticate through your identity provider when accessing account resources, giving you full control over application access.
+Once you complete SSO configuration, your users must authenticate through your identity provider when accessing account resources, giving you full control over app access.
 
 ## Directory sync
 
@@ -41,7 +41,7 @@ Once you complete SSO configuration, your users must authenticate through your i
 
 Provisioned users are given basic “Member” roles and have access to any resources that role entails.
 
-When a user is unassigned from the Prefect Cloud application in your identity provider, they automatically lose access to 
+When a user is unassigned from the Prefect Cloud app in your identity provider, they automatically lose access to 
 Prefect Cloud resources. This allows your IT team to control access to Prefect Cloud without signing into the Prefect UI.
 
 ## SCIM Provisioning
