--- a/docs/contribute/code-of-conduct.mdx
+++ b/docs/contribute/code-of-conduct.mdx
@@ -3,6 +3,8 @@ title: Code of conduct
 description: Learn about the standards we hold ourselves and our community to.
 ---
 
+<!-- vale Google.We = NO -->
+
 ## Our pledge
 
 In the interest of fostering an open and welcoming environment, we as contributors and maintainers pledge to making 
@@ -40,7 +42,7 @@ other behaviors that they deem inappropriate, threatening, offensive, or harmful
 ## Scope
 
 This Code of Conduct applies within all project spaces. It also applies when an individual represents the project or its 
-community in public spaces. Examples of representing a project or community include using an official project e-mail address, 
+community in public spaces. Examples of representing a project or community include using an official project email address, 
 posting through an official social media account, or acting as an appointed representative at an online or offline event. 
 Project maintainers may further clarify what "representation of a project" means.
 
@@ -59,3 +61,5 @@ repercussions, as determined by other members of the project's leadership.
 
 This Code of Conduct is adapted from the [Contributor Covenant, version 1.4](https://www.contributor-covenant.org/version/1/4/code-of-conduct.html). 
 See the [Contributor Covenant FAQ](https://www.contributor-covenant.org/faq) for more information.
+
+<!-- vale Google.We = YES -->
