--- a/docs/integrations/prefect-shell/index.mdx
+++ b/docs/integrations/prefect-shell/index.mdx
@@ -4,7 +4,7 @@ title: prefect-shell
 
 Execute shell commands from within Prefect flows.
 
-## Getting Started
+## Getting started
 
 ### Prerequisites
 
