--- a/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
+++ b/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
@@ -309,8 +309,8 @@ if __name__ == "__main__":
 ```
 
 <Note>
-When using `flow.from_source(...).deploy(...)`, the flow you're deploying does not 
-need to be available locally before running your script.
+When using `flow.from_source(...).deploy(...)`, the flow you're deploying does not need to be available locally before running your script.
+
 </Note>
 
 #### Deploying via a Docker image
