--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -218,7 +218,7 @@ See the [caching documentation](/3.0rc/develop/write-tasks#caching) for more inf
 Prefect 2 uses Pydantic V1 to validate data, particularly for blocks and work pools. 
 Prefect 3 has been upgraded to Pydantic V2. This upgrade does not require changes for any built-in Prefect interfaces or supporting integrations. 
 However, if you have registered custom blocks with a self-hosted Prefect Server, type enforcement for those block schemas must be upgraded to Pydantic V2 to work with Prefect 3. 
-See the the [Pydantic migration guide](https://docs.pydantic.dev/latest/migration/) for more information.
+See the [Pydantic migration guide](https://docs.pydantic.dev/latest/migration/) for more information.
 
 ## Workers have replaced agents
 
