--- a/docs/integrations/prefect-snowflake/index.mdx
+++ b/docs/integrations/prefect-snowflake/index.mdx
@@ -196,7 +196,7 @@ Note, to use the `load` method on a block, you must already have a block saved t
 Below is a walkthrough on saving a `SnowflakeCredentials` block through code.
 
 1. Head over to https://app.snowflake.com/.
-2. Login to your Snowflake account, e.g. nh12345.us-east-2.snowflake, with your username and password.
+2. Login to your Snowflake account, for example: nh12345.us-east-2.snowflake, with your username and password.
 3. Use those credentials to fill replace the placeholders below.
 
 ```python
