--- a/docs/3.0rc/resources/daemonize-processes.mdx
+++ b/docs/3.0rc/resources/daemonize-processes.mdx
@@ -62,7 +62,7 @@ pip3 install prefect
 This guide assumes you are installing Prefect globally, rather than a virtual environment.
 If running a systemd service in a virtual environment, change the ExecPath.
 For example, if using [venv](https://docs.python.org/3/library/venv.html), change the ExecPath
-to target the `prefect` app in the `bin` subdirectory of your virtual environment.
+to target the `prefect` application in the `bin` subdirectory of your virtual environment.
 
 Next, set up your environment so the Prefect client knows which server to connect to.
 
