--- a/docs/integrations/prefect-email/index.mdx
+++ b/docs/integrations/prefect-email/index.mdx
@@ -48,7 +48,7 @@ from prefect_email import EmailServerCredentials
 
 credentials = EmailServerCredentials(
     username="EMAIL-ADDRESS-PLACEHOLDER",
-    password="PASSWORD-PLACEHOLDER",  # must be an app password
+    password="PASSWORD-PLACEHOLDER",  # must be an application password
 )
 credentials.save("BLOCK-NAME-PLACEHOLDER")
 ```
