--- a/docs/3.0rc/develop/state-hooks.mdx
+++ b/docs/3.0rc/develop/state-hooks.mdx
@@ -115,7 +115,7 @@ assert data == {"x": "foo", "y": 42, "state": task_run_state}
 
 ## Common uses of state change hooks
 
-Below are two common real-world apps of state change hooks. 
+Below are two common real-world applications of state change hooks. 
 
 ### Send a notification when a flow run fails
 
