--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Prefect Cloud Overview
-description: Observe and orchestrate your workflow apps with the Prefect Cloud platform.
+description: Observe and orchestrate your workflow applications with the Prefect Cloud platform.
 ---
 
 Prefect Cloud is a hosted workflow application platform with all the capabilities of an open source Prefect server instance plus additional features, such as:
