--- a/docs/3.0rc/resources/daemonize-processes.mdx
+++ b/docs/3.0rc/resources/daemonize-processes.mdx
@@ -3,7 +3,7 @@ title: Daemonize worker processes
 description: Learn how Prefect flow deployments enable configuring flows for scheduled and remote execution with workers.
 ---
 
-When running workflow apps, it's helpful to create long-running processes that
+When running workflow applications, it's helpful to create long-running processes that
 run at startup and are resilient to failure.
 
 This guide shows you how to set up a systemd service to create long-running Prefect processes
