--- a/docs/integrations/prefect-gcp/gcp-worker-guide.mdx
+++ b/docs/integrations/prefect-gcp/gcp-worker-guide.mdx
@@ -3,7 +3,7 @@ title: Google Cloud Run Worker Guide
 ---
 
 ## Why use Google Cloud Run for flow run execution?
-Google Cloud Run is a fully managed compute platform that automatically scales your containerized apps.
+Google Cloud Run is a fully managed compute platform that automatically scales your containerized applications.
 
 1. Serverless architecture: Cloud Run follows a serverless architecture, which means you don't need to manage any underlying infrastructure. Google Cloud Run automatically handles the scaling and availability of your flow run infrastructure, allowing you to focus on developing and deploying your code.
 
