--- a/docs/3.0rc/develop/blocks.mdx
+++ b/docs/3.0rc/develop/blocks.mdx
@@ -217,7 +217,7 @@ class Cube(Block):
     edge_length_inches: float
 ```
 
-You can add methods to a block to provide additional actions. 
+You can add methods to a block to provide additional capabilities. 
 Here's the same cube block with methods to calculate the volume and surface area of the cube:
 
 ```python
