standardize headings in develop section

--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -6,7 +6,7 @@ description: Learn the basics of defining and running flows.
 Flows are the most central Prefect object. 
 A flow is a container for workflow logic as code. 
 
-## Writing flows
+## Write flows
 
 Flows are defined as Python functions. 
 They can take inputs, perform work, and return an output.
