--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -212,7 +212,7 @@ If it has, the cached result from the previous run is used. If it hasn't, the ta
 
 Tasks that may have re-run with the same inputs in Prefect 2 do not re-run in Prefect 3 unless the cache key is modified to be more precise.
 The cache key can be configured through the new global `cache_policy` setting, or through the `cache_policy` on a particular task.
-If a particular task cannot be made idempotent, you can disable this behavior by setting `cache_policy=NONE` on the task.
+If a particular task isn't idempotent, you can disable this behavior by setting `cache_policy=NONE` on the task.
 
 This caching behavior only takes effect when result persistence is enabled.
 See the [caching documentation](/3.0rc/develop/task-caching) for more information.
@@ -241,7 +241,7 @@ See the [set and get variables](/3.0rc/develop/variables) page for more informat
 
 ## Self-hosted server database upgrade
 
-If you are [self-hosting a Prefect server instance](/3.0rc/manage/self-host), run the following code to update your database for Prefect 3:
+If you are [self-hosting a Prefect server instance](/3.0rc/manage/self-host), run the following command to update your database for Prefect 3:
 
 ```bash
 prefect server database upgrade -y
