--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -19,7 +19,7 @@ All previous and future Prefect 2 releases will continue to work with Prefect Cl
 ## Module location and name changes
 
 Some modules have been renamed, reorganized, or removed for clarity. 
-Objects imported from changed modules will work until their six month deprecation period ends, but will raise deprecation warnings. 
+Objects whose import paths have changed will remain functional until their six month deprecation period ends, but will raise deprecation warnings. 
 
 See the [migration script](https://github.com/PrefectHQ/prefect/blob/main/src/prefect/_internal/compatibility/migration.py#L22) for the full list of modules that have been moved or removed.
 
