--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -10,7 +10,7 @@ The Write and run workflows section contains information for getting started wit
 - [Write and run flows](/write-flows/) introduces the most central Prefect object, the `flow`. 
 - [Write and run tasks](/write-tasks/) shows you how to create `task` decorated functions that represent a discrete unit of work in a Prefect workflow.
 - [Run taks in the background](/develop/task-runners/) explains how you can use tasks to execute small, discrete units of work quickly, obviating the need for a full flow or a tool such as Celery.
-- [Log run activity](/develop/logging/) shows you how to Ccpture fine-grained information about flows and tasks for monitoring, troubleshooting, and auditing.
+- [Log run activity](/develop/logging/) shows you how to capture fine-grained information about flows and tasks for monitoring, troubleshooting, and auditing.
 
 The **Configure runtime behavior** section introduces advanced features for interacting with running workflows and automatically taking actions based on workflow state.
 
