--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -5,7 +5,7 @@ description: Learn how to write code with Prefect objects for workflows you can 
 
 This section explains how to develop Prefect workflows. 
 
-The Write and run workflows section contains information for getting started with Prefect's core objects.
+The **Write and run workflows** section contains information for getting started with Prefect's core objects.
 
 - [Write and run flows](/write-flows/) introduces the most central Prefect object, the `flow`. 
 - [Write and run tasks](/write-tasks/) shows you how to create `task` decorated functions that represent a discrete unit of work in a Prefect workflow.
