--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -31,7 +31,7 @@ The **Manage state and configuration** section explores how to manage data and c
 - [Manage cloud-hosted data](/develop/interact-with-data/) shows convieniences for moving data to and from cloud storage providers.
 
 
-The **Manage concurrency** section discusses speeding up your workflows and limiting them with concurrency.
+The **Manage concurrency** section discusses speeding up your workflows with task runners and limiting them with concurrency.
 
 - [Run tasks concurrently or in parallel](/develop/task-runners/) explains how to run tasks concurrently or in parallel with Dask or Ray.
 - [Limit concurrent task runs](/develop/task-run-limits/) shows how to prevent too many tasks from running simultaneously.
