--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -37,4 +37,4 @@ The **Manage concurrency** section discusses speeding up your workflows with tas
 - [Limit concurrent task runs](/develop/task-run-limits/) shows how to prevent too many tasks from running simultaneously.
 - [Apply concurrency and rate limits](/develop/global-concurrency-limits/) demonstrates how to control concurrency and apply rate limits using Prefect's provided utilities.
 
-Finally, [Test workflows](/develop/test-workflows/) discusses conveniences for testing workflows.
+Finally, [Test workflows](/develop/test-workflows/) discusses tools for testing workflows.
