--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: Learn how to write code with Prefect objects for workflows you can trust.
 ---
 
-This section explains how to develop Prefect workflows. 
+These pages explains how to develop Prefect workflows. 
 
 The **Write and run workflows** section contains information for getting started with Prefect's core objects.
 
