--- a/docs/3.0rc/automate/automate-overview.mdx
+++ b/docs/3.0rc/automate/automate-overview.mdx
@@ -6,9 +6,9 @@ description: Learn how to automate workflows with Prefect.
 This **Automate** section explains how create workflows that run automatically and respond to events.
 
 
-- [Schedule flow runs](/automate/add-schedules/) explains how to schedule flow runs for specific times or intervals.
-- [Track activity through events](/automate/events/events/) discusses how to observe events that create a record of activity.
-- [Trigger actions on events](automate/events/automations-triggers/) shows how to use events to trigger actions.
-- [Define custom event triggers](/automate/events/custom-triggers/) 
-- [Receive events with webhooks]()
-- [Manage incidents]()
+- [Schedule flow runs](/3.0rc/automate/add-schedules/) explains how to schedule flow runs for specific times or intervals.
+- [Track activity through events](/3.0rc/automate/events/events/) discusses how to observe events that create a record of activity.
+- [Trigger actions on events](/3.0rc/automate/events/automations-triggers/) shows how to use events to trigger actions.
+- [Define custom event triggers](/3.0rc/automate/events/custom-triggers/) discusses advanced trigger options.
+- [Receive events with webhooks](/3.0rc/automate/events/webhook-triggers/) explains how to use webhooks to receive events from external systems with Prefect cloud.
+- [Manage incidents](/3.0rc/automate/incidents/) shows how Prefect cloud can help identify, resolve, and document issues in mission-critical workflows.
