--- a/docs/3.0rc/automate/automate-overview.mdx
+++ b/docs/3.0rc/automate/automate-overview.mdx
@@ -11,4 +11,4 @@ This **Automate** section explains how create workflows that run automatically a
 - [Trigger actions on events](/3.0rc/automate/events/automations-triggers/) shows how to use events to trigger actions.
 - [Define custom event triggers](/3.0rc/automate/events/custom-triggers/) discusses advanced trigger options.
 - [Receive events with webhooks](/3.0rc/automate/events/webhook-triggers/) explains how to use webhooks to receive events from external systems with Prefect cloud.
-- [Manage incidents](/3.0rc/automate/incidents/) shows how Prefect cloud can help identify, resolve, and document issues in mission-critical workflows.
+- [Manage incidents](/3.0rc/automate/incidents/) show how Prefect Cloud can help identify, resolve, and document issues in mission-critical workflows.
