--- a/docs/3.0rc/automate/events/events.mdx
+++ b/docs/3.0rc/automate/events/events.mdx
@@ -115,7 +115,7 @@ Here is an example of a related resource:
 ]
 ```
 
-## Events in the Cloud UI
+## Events in the UI
 
 The Prefect UI provides an interactive dashboard to analyze and take action on events that occurred in your workspace on the event feed page.
 
