--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -1,12 +1,12 @@
 ---
-title: Prefect Cloud Overview
+title: Prefect Cloud overview
 description: Observe and orchestrate your workflow applications with the Prefect Cloud platform.
 ---
 
 Prefect Cloud is a hosted workflow application platform with all the capabilities of an open source Prefect server instance plus additional features, such as:
 
-- [User accounts](#user-accounts)&mdash;personal accounts for working in Prefect Cloud.
 - [Workspaces](#workspaces/)&mdash;isolated environments to organize your flows, deployments, and flow runs.
+- [User accounts](#user-accounts)&mdash;personal accounts for working in Prefect Cloud.
 - [Service accounts](/3.0rc/manage/cloud/manage-users/service-accounts/)&mdash;configure API access for running workers or executing flow runs on remote infrastructure.
 - [Custom role-based access controls (RBAC)](/3.0rc/manage/cloud/manage-users/manage-roles/)&mdash;assign users granular permissions to perform certain activities within an account or a workspace.
 - [Single Sign-on (SSO)](/3.0rc/manage/cloud/manage-users/configure-sso/)&mdash;authentication using your identity provider.
@@ -99,6 +99,6 @@ Prefect Cloud REST API documentation is available at <a href="https://app.prefec
 
 ## Try Prefect Cloud
 
-To try Prefect Cloud, create a forever-free account at [https://app.prefect.cloud/](https://app.prefect.cloud/).
+To try Prefect Cloud, create a free account at [https://app.prefect.cloud/](https://app.prefect.cloud/).
 Then, follow the steps in the UI to create and run your first workflow. 
 See the [Prefect Quickstart](/3.0rc/get-started/quickstart/) for more information.
