--- a/docs/3.0rc/manage/cloud/troubleshoot-cloud.mdx
+++ b/docs/3.0rc/manage/cloud/troubleshoot-cloud.mdx
@@ -1,6 +1,6 @@
 ---
 title: Troubleshoot Prefect Cloud
-description: Learn tips and tricks and common solutions for troubleshooting Prefect Cloud.
+description: Learn tips, tricks, and common solutions for troubleshooting Prefect Cloud.
 ---
 
 ## Prefect Cloud and proxies
