simplify cloud pages and fix apostrophes

--- a/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
@@ -1,6 +1,6 @@
 ---
-title: Run flows on Prefect Managed infra
-description: Learn how Prefect will run your deployment on our infrastructure.
+title: Run flows on Prefect Managed infrastructure
+description: Learn how Prefect runs deployments on Prefect's infrastructure.
 ---
 Prefect Cloud can run your flows on your behalf with Prefect Managed work pools.
 Flows that run with this work pool do not require a worker or cloud provider 
