--- a/docs/3.0rc/manage/manage-overview.mdx
+++ b/docs/3.0rc/manage/manage-overview.mdx
@@ -9,13 +9,13 @@ The **Cloud and Server** docs show how to get the most out of Prefect Cloud or a
 
 The **Use Prefect Cloud** section covers how to interact with Prefect Cloud.
 
-- [Prefect Cloud overview](/3.0rc/manage//) introduces Prefect Cloud.
-- [Connect to Prefect Cloud](/3.0rc/manage//) shows how to cloudonfigure a local execution environment to access Prefect Cloud.
-- [Manage workspaces](/3.0rc/manage//) explains how to organize and compartmentalize your workflows with workspaces.
+- [Prefect Cloud overview](/3.0rc/manage/cloud/) introduces Prefect Cloud.
+- [Connect to Prefect Cloud](/3.0rc/manage/cloud/connect-to-cloud/) shows how to configure a local execution environment to access Prefect Cloud.
+- [Manage workspaces](/3.0rc/manage/cloud/workspaces/) explains how to organize and compartmentalize your workflows with workspaces.
 
 - The **Manage accounts** subsection covers aspects of Prefect Cloud accounts.
 
-- [Manage user accounts](/3.0rc/manage//) 
+- [Manage user accounts](/3.0rc/manage/cloud/manage-users/) 
 - [Manage service accounts](/3.0rc/manage//) 
 - [Manage teams](/3.0rc/manage//) 
 - [Manage account roles](/3.0rc/manage//) 
