--- a/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
@@ -2,7 +2,8 @@
 title: Run flows on Prefect Managed infrastructure
 description: Learn how Prefect runs deployments on Prefect's infrastructure.
 ---
-Prefect Cloud can run your flows on your behalf with Prefect Managed work pools.
+
+<span class="badge cloud"></span> Prefect Cloud can run your flows on your behalf with Prefect Managed work pools.
 Flows that run with this work pool do not require a worker or cloud provider 
 account—Prefect handles the infrastructure and code execution for you.
 
