--- a/docs/3.0rc/manage/manage-overview.mdx
+++ b/docs/3.0rc/manage/manage-overview.mdx
@@ -32,3 +32,12 @@ The remaining Prefect Cloud pages:
 - [Host Prefect server](/3.0rc/manage//) 
 - [Configure settings and profiles](/3.0rc/manage//) 
 - [Manage run metadata in Python](/3.0rc/manage//) 
+
+The [Prefect REST API](/3.0rc/api-ref/rest-api/) is used to send and receive data for orchestration and monitoring between Prefect clients and Prefect Cloud or a self-hosted Prefect server instance.
+This API is mainly consumed by Prefect clients such as the Prefect Python Client or the Prefect UI.
+
+<Info> 
+**Prefect Cloud REST API interactive documentation**
+
+Prefect Cloud REST API documentation is available at <a href="https://app.prefect.cloud/api/docs" target="_blank">https://app.prefect.cloud/api/docs</a>.
+</Info>
