--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -8,47 +8,23 @@ Prefect Cloud is a hosted workflow application platform with all the capabilitie
 - [Workspaces](/3.0rc/manage/cloud/workspaces/) are isolated environments for organizing all Prefect activity including flows, tasks, and automations.
 - [User accounts](/3.0rc/manage/cloud/manage-users/) are personal accounts for working in Prefect Cloud.
 - [Service accounts](/3.0rc/manage/cloud/manage-users/service-accounts/) <span class="badge pro"></span> <span class="badge enterprise"></span> let you configure API access for running workers or executing flow runs on remote infrastructure through API keys that are not associated with a user account.
-- Teams
-- [Role-based access controls (RBAC)](/3.0rc/manage/cloud/manage-users/manage-roles/) assign users granular permissions to perform certain activities within an account or a workspace. Custom roles can be created with specific permissions in Pro and Enterprise plans.
-- API keys
-- [Single Sign-on (SSO)](/3.0rc/manage/cloud/manage-users/configure-sso/) <span class="badge pro"></span> <span class="badge enterprise"></span> [Pro and Enterprise plans](https://www.prefect.io/pricing) offer [single sign-on (SSO)](/3.0rc/manage/cloud/manage-users/configure-sso/) authentication integration with your team's identity provider.
-SSO integration can bet set up with identity providers that support OIDC and SAML.
-Directory Sync and SCIM provisioning is also available with Enterprise plans.
-- [Audit Logs](/3.0rc/manage/cloud/manage-users/audit-logs/) a record of user activities to monitor security and compliance.
-- Collaboration   invite other people to your account.
-- Object Access Control Lists (ACLs)
+- [Teams](3.0rc/manage/cloud/manage-users/manage-teams/)  <span class="badge enterprise"></span> are groups of users that can be managed together.
+- [Role-based access controls (RBAC)](/3.0rc/manage/cloud/manage-users/manage-roles/) are granular permissions to perform certain activities within an account or a workspace. Custom roles can be created with specific permissions in Pro and Enterprise plans.
+- [API keys](/3.0rc/manage/cloud/manage-users/api-keys/) are used to access Prefect Cloud from a local execution environment.
+- [Single Sign-on (SSO)](/3.0rc/manage/cloud/manage-users/configure-sso/) <span class="badge enterprise"></span> authentication integration with your team's identity provider. SSO integration can be set up with identity providers that support OIDC and SAML. Directory Sync and SCIM provisioning is also available with Enterprise plans.
+- [Audit Logs](/3.0rc/manage/cloud/manage-users/audit-logs/) <span class="badge pro"></span> <span class="badge enterprise"></span> provide a record of user activities to monitor for security and compliance.
+- Object Access Control Lists (ACLs)](/3.0rc/manage/cloud/manage-users/object-access-control-lists/) <span class="badge enterprise"></span> allow administrators to restrict block and deployment access to individual actors within a workspace.
 
+- [Push work pools](/3.0rc/deploy/infrastructure-examples/serverless/) allow you to run flows on your serverless infrastructure without running a worker.
+- [Managed work pools](/3.0rc/deploy/infrastructure-examples/managed/) allow you to run flows on Prefect's infrastructure without running a worker.
+- [Webhooks](/3.0rc/automate/events/webhook-triggers/) .
+- [Incidents](/3.0rc/automate/incidents/) <span class="badge enterprise></span> are a way to track and manage issues that arise during flow runs.
 
 - Error summaries (enabled by Marvin AI) distill the error logs of `Failed` and `Crashed` flow runs into actionable information. To enable this feature visit the **Settings** page for your account.
-- [Push work pools](/3.0rc/deploy/infrastructure-examples/serverless/)&mdash;run flows on your serverless infrastructure without running a worker.
-- [Managed work pools](/3.0rc/deploy/infrastructure-examples/managed/)
-- [Webhooks](/3.0rc/automate/events/webhook-triggers/)
-- [Incidents](/3.0rc/automate/incidents/) <span class="badge pro"></span> <span class="badge enterprise"></span>
-
-
-
-## Single Sign-on (SSO) 
-
-
-
-## Audit logs <span class="badge pro"></span> <span class="badge enterprise"></span>
-
-Prefect Cloud's [Pro and Enterprise plans](https://www.prefect.io/pricing) offer [Audit Logs](/3.0rc/manage/cloud/manage-users/audit-logs/) for compliance and security.
-Audit logs provide a chronological record of activities performed by users in an account.
-
-## Prefect Cloud REST API
-
-The [Prefect REST API](/3.0rc/api-ref/rest-api/) is used for communicating data from Prefect clients to Prefect Cloud or a local Prefect server for orchestration and monitoring.
-This API is mainly consumed by Prefect clients like the Prefect Python Client or the Prefect UI.
-
-<Info> 
-**Prefect Cloud REST API interactive documentation**
-
-Prefect Cloud REST API documentation is available at <a href="https://app.prefect.cloud/api/docs" target="_blank">https://app.prefect.cloud/api/docs</a>.
-</Info>
 
 ## Try Prefect Cloud
 
 To try Prefect Cloud, create a free account at [https://app.prefect.cloud/](https://app.prefect.cloud/).
-Then, follow the steps in the UI to create and run your first workflow. 
+Follow the steps in the UI to create and run your first workflow. 
+
 See the [Prefect Quickstart](/3.0rc/get-started/quickstart/) for more information.
