--- a/docs/3.0rc/manage/manage-overview.mdx
+++ b/docs/3.0rc/manage/manage-overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Cloud and server overview
 description: Learn how to interact with Prefect Cloud or self-host a Prefect server instance.
 ---
 
