add page to mint.json and unify titles

--- a/docs/3.0rc/automate/automate-overview.mdx
+++ b/docs/3.0rc/automate/automate-overview.mdx
@@ -1,10 +1,9 @@
 ---
-title: Overview
+title: Automate overview
 description: Learn how to automate workflows with Prefect.
 ---
 
 This **Automate** section explains how create workflows that run automatically and respond to events.
-
 
 - [Schedule flow runs](/3.0rc/automate/add-schedules/) explains how to schedule flow runs for specific times or intervals.
 - [Track activity through events](/3.0rc/automate/events/events/) discusses how to observe events that create a record of activity.
