fixed a grammatical error in quickstart.mdx
Changed `considering` to `consider` in line #253

- Before: `Now considering reading:`

- After: `Now consider reading:`

--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -250,7 +250,7 @@ Deployments elevate flows to remotely configurable entities that have their own 
 ## Next steps
 
 You've seen how to move from a Python script to a scheduled, observable, remotely orchestrated workflow with Prefect.
-Now considering reading: 
+Now consider reading: 
 
 * [Write flows](/3.0rc/develop/write-flows)
 * [Write tasks](/3.0rc/develop/write-tasks)
