--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -5,7 +5,7 @@ description: Learn how to write code with Prefect objects for workflows you can 
 
 These pages explain how to develop Prefect workflows. 
 
-The **Write and run workflows** section contains information for getting started with Prefect's core objects.
+The **Write and run workflows** section introduces and explains Prefect's core concepts.
 
 - [Write and run flows](/3.0rc/write-flows/) introduces the most central Prefect object, the `flow`. 
 - [Write and run tasks](/3.0rc/write-tasks/) shows you how to create `task` decorated functions that represent a discrete unit of work in a Prefect workflow.
