--- a/docs/3.0rc/automate/events/webhook-triggers.mdx
+++ b/docs/3.0rc/automate/events/webhook-triggers.mdx
@@ -5,7 +5,7 @@ description: Observe and respond to events from other systems.
 
 <span class="badge cloud"></span>  Prefect Cloud webhooks can receive, observe, and respond to events
 from other systems in your ecosystem. 
-Each webhook exposes a unique URL endpoint to receive events from other systems and transforms them into Prefect
+Each webhook exposes a unique URL endpoint to receive events from other systems and transform them into Prefect
 [events](/3.0rc/automate/events/) for use in [automations](/3.0rc/automate/events/automations-triggers/).
 
 Webhooks are defined by two essential components: a unique URL and a template that translates incoming web requests to a 
