--- a/docs/3.0rc/manage/self-host.mdx
+++ b/docs/3.0rc/manage/self-host.mdx
@@ -10,7 +10,7 @@ To host a Prefect server instance on Kubernetes, check out the prefect-server [H
 After installing Prefect, you have a Python SDK client that can communicate with 
 either [Prefect Cloud](/3.0rc/manage/cloud/) or a self-hosted Prefect server, backed by a database and a UI.
 
-Prefect Cloud and a self-hosted Prefect server instance share a common set of capabilities. 
+Prefect Cloud and self-hosted Prefect server share a common set of capabilities. 
 Prefect Cloud provides the additional features required by organizations such as RBAC, Audit logs, and SSO. 
 See the [Prefect Cloud overview](/3.0rc/manage/cloud/) for more information.
 
