--- a/docs/3.0rc/automate/events/webhook-triggers.mdx
+++ b/docs/3.0rc/automate/events/webhook-triggers.mdx
@@ -4,7 +4,7 @@ description: Observe and respond to events from other systems.
 ---
 
 <span class="badge cloud"></span>  Prefect Cloud webhooks can receive, observe, and respond to events
-from other systems in your ecosystem. 
+from other systems. 
 Each webhook exposes a unique URL endpoint to receive events from other systems and transform them into Prefect
 [events](/3.0rc/automate/events/) for use in [automations](/3.0rc/automate/events/automations-triggers/).
 
