--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -15,7 +15,7 @@ The **Manage accounts** subsection covers aspects of Prefect Cloud accounts:
 - [Manage user accounts](/3.0rc/manage/cloud/manage-users/) explains how to use Prefect Cloud's personal accounts.
 - [Manage service accounts](/3.0rc/manage/cloud/manage-users/service-accounts/) describes how to configure API access for running workers or executing flow runs on remote infrastructure through API keys that are not associated with a user account. <span class="badge pro"></span> <span class="badge enterprise"></span>
 - [Manage teams](3.0rc/manage/cloud/manage-users/manage-teams/) demonstrates how groups of users can be managed together. <span class="badge enterprise"></span>
-- [Manage account roles](/3.0rc/manage/cloud/manage-users/manage-roles/) show how to use role-based access controls (RBAC): granular permissions to perform certain activities within an account or a workspace. Enterprise plans allow for custom roles with specific permissions. 
+- [Manage account roles](/3.0rc/manage/cloud/manage-users/manage-roles/) shows how to use role-based access controls (RBAC): granular permissions to perform certain activities within an account or a workspace. Enterprise plans allow for custom roles with specific permissions. 
 - [Manage API keys](/3.0rc/manage/cloud/manage-users/api-keys/) explains how to grant access to Prefect Cloud from a local execution environment.
 - [Configure single sign-on](/3.0rc/manage/cloud/manage-users/configure-sso/) describes how (SSO) authentication integration is supported through identity providers with OIDC and SAML. Directory Sync and SCIM provisioning is also available. <span class="badge enterprise"></span>
 - [Audit Cloud activity](/3.0rc/manage/cloud/manage-users/audit-logs/) shows how Prefect provides a record of user activities to monitor for security and compliance. <span class="badge pro"></span> <span class="badge enterprise"></span>
