Simplify Sidebar titles

--- a/docs/3.0rc/deploy/index.mdx
+++ b/docs/3.0rc/deploy/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Deploy overview
+sidebarTitle: Overview
 description: Learn how to use deployments to trigger flow runs remotely.
 ---
 
