--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: Develop overview
+sidebarTitle: Overview
 description: Learn how to write code with Prefect objects for workflows you can trust.
 ---
 
