Add Cloud and Server

--- a/docs/3.0rc/manage/manage-overview.mdx
+++ b/docs/3.0rc/manage/manage-overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: Cloud and server overview
+sidebarTitle: Overview
 description: Learn how to interact with Prefect Cloud or self-host a Prefect server instance.
 ---
 
