fixes broken links

--- a/docs/3.0rc/develop/develop-overview.mdx
+++ b/docs/3.0rc/develop/develop-overview.mdx
@@ -8,8 +8,8 @@ These pages explain how to develop Prefect workflows.
 
 The **Write and run workflows** section introduces and explains Prefect's core concepts.
 
-- [Write and run flows](/3.0rc/write-flows/) introduces the most central Prefect object, the `flow`. 
-- [Write and run tasks](/3.0rc/write-tasks/) shows you how to create `task` decorated functions that represent a discrete unit of work in a Prefect workflow.
+- [Write and run flows](/3.0rc/develop/write-flows/) introduces the most central Prefect object, the `flow`. 
+- [Write and run tasks](/3.0rc/develop/write-tasks/) shows you how to create `task` decorated functions that represent a discrete unit of work in a Prefect workflow.
 - [Run tasks in the background](/3.0rc/develop/task-runners/) explains how to use tasks to execute small, discrete units of work quickly.
 - [Log run activity](/3.0rc/develop/logging/) shows you how to capture fine-grained information about flows and tasks for monitoring, troubleshooting, and auditing.
 
