--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -44,7 +44,7 @@ if __name__ == "__main__":
   <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/index">
     Run workflows in local processes or deploy workflows to dynamically provisioned infrastructure.
   </Card>
-  <Card title="Automate" icon="eyes" href="/3.0rc/automate/events/automations-triggers">
+  <Card title="Automate" icon="robot" href="/3.0rc/automate/events/automations-triggers">
     Enable workflows to react to their environment with events, automations, and webhooks.
   </Card>
 </CardGroup>
